--- a/widgets/new_password/new_password.css
+++ b/widgets/new_password/new_password.css
@@ -88,9 +88,17 @@ body {
 
 .message {
     position: fixed; 
-    bottom: 10px; 
+    bottom: 20px; 
     width: 100%; 
+    max-width: 400px;
     text-align: center; 
     display: block;
     visibility: hidden;
+    padding: 12px;
+    margin-top: 10px;
+    background-color: #FF8C42; /* Soft orange button */
+    border: none;
+    border-radius: 8px;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
 }
