--- a/widgets/homescreen/homescreen.css
+++ b/widgets/homescreen/homescreen.css
@@ -20,6 +20,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
 }
 
 .sidebar {
@@ -31,6 +32,7 @@ body {
     padding: 20px;
     background-color: #FFFFFF;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 .content {
     padding: 20px;
@@ -39,26 +41,29 @@ body {
     overflow-y: auto; /* Add vertical scrollbar if necessary */
     margin-top: 100px; /* Height of the topbar */
     margin-left: 290px; /* Width of the sidebar */
-    z-index: -1;
+    z-index: 0;
 }
 
 .round-button {
     display: inline-block;
-    padding: 15px 20px;
+    width: 60px; /* Set width */
+    height: 60px; /* Set height */
     font-size: 16px;
     font-weight: bold;
     color: white;
     background-color: #FF8C42; /* Soft orange color */
     border: none;
-    border-radius: 50%;
-    box-shadow: 0 5px #FF6F00; /* Darker orange for 3D effect */
+    border-radius: 50%; /* Make it a circle */
+    box-shadow: 0 7px #FF6F00; /* Increase the shadow for a stronger 3D effect */
     cursor: pointer;
     transition: all 0.3s ease;
+    text-align: center; /* Center text horizontally */
+    line-height: 60px; /* Center text vertically */
 }
 
 .round-button:active {
-    box-shadow: 0 2px #FF6F00; /* Darker orange for 3D effect */
-    transform: translateY(3px);
+    box-shadow: 0 0px #FF6F00; /* Increase the shadow for a stronger 3D effect */
+    transform: translateY(7px); /* Increase the translation for a stronger 3D effect */
 }
 
 .round-button:hover {
