--- a/widgets/new_password/new_password.css
+++ b/widgets/new_password/new_password.css
@@ -51,10 +51,10 @@ body {
 }
 
 .btn:hover {
-    background-color: #FF6F00; /* Darker orange on hover */
+    background-color: #FF6F00;
 }
 
-/* Guest login button in the top right */
+
 .back {
     position: absolute;
     top: 20px;
@@ -74,7 +74,6 @@ body {
     color: white;
 }
 
-/* Mobile responsiveness */
 @media (max-width: 768px) {
     .container {
         max-width: 90%;
@@ -96,7 +95,7 @@ body {
     visibility: hidden;
     padding: 12px;
     margin-top: 10px;
-    background-color: #FF8C42; /* Soft orange button */
+    background-color: #FF8C42;
     border: none;
     border-radius: 8px;
     color: rgb(255, 255, 255);
