--- a/widgets/homescreen/homescreen.css
+++ b/widgets/homescreen/homescreen.css
@@ -28,8 +28,8 @@ body {
     top: 100px; 
     left: 0;
     height: calc(100vh - 60px);
-    width: 250px;
-    padding: 20px;
+    width: 300px;
+    padding-top: 50px;
     background-color: #FFFFFF;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     z-index: 1;
